--- a/views/system.ejs
+++ b/views/system.ejs
@@ -32,13 +32,17 @@
                   <input type="text" class="form-control" style="width: 320px" id="personGender" name="personGender" placeholder="M/F">
                 </div>
                 <div class="form-group">
+                  <label for="personDesc">简介</label>
+                  <input type="text" class="form-control" style="width: 320px" id="personDesc" name="personDesc">
+                </div>
+                <div class="form-group">
                   <label for="avatar">明星照片</label>
                   <input type="file" class="form-control-file" id="avatar" name="avatar" accept="image/png, image/jpeg, image/jpg"
                     onchange="preImg(this.id,'photo');">
                 </div>
                 <div class="form-group">
                   <label for="avatar">明星童年照片</label>
-                  <input type="file" class="form-control-file" id="avatar2" name="avatar2" accept="image/png, image/jpeg, image/jpg"
+                  <input type="file" class="form-control-file" id="avatar2" name="avatar" accept="image/png, image/jpeg, image/jpg"
                     onchange="preImg(this.id,'photo2');">
                 </div>
                 <input type="submit" class="btn btn-primary" value="确认并上传">
